testsuite/tests/linear/should_fail/Linear1.stderr

Linear1.hs:10:14: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In an equation for ‘incorrectDup’: incorrectDup x = (x, x)

Linear1.hs:14:15: error:
    • Couldn't match expected weight ‘1’ of variable ‘x’ with actual weight ‘0’
    • In an equation for ‘incorrectDrop’: incorrectDrop x = ()
